invify-backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invify-service
spec:
  type: ClusterIP
  selector:
    app: invify-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
