invify-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invify-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.invify.org
    secretName: invify-tls
  rules:
  - host: api.invify.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invify-service
            port:
              number: 80
